# yoga

./: README.md
.github/workflows/: build-cpp.yml  build-hs.yml  nix.yml
cpp/: CMakeLists.txt  README.md  default.nix
cpp/app/: yoga-cli.cpp  yoga-console.cpp
cpp/app/yoga-console/: EnvCitycatConsole.hpp  RenderConsole.hpp  main.cpp
cpp/app/yoga-sdl/: EnvCartpoleSdl.hpp  main.cpp
cpp/include/yoga/: Agent.hpp  Random.hpp  RenderConsole.hpp  RenderSdl.hpp
cpp/include/yoga/Agent/: AgentExpert.hpp  AgentRandom.hpp
cpp/include/yoga/Env/: EnvCartpole.hpp  EnvCartpoleSdl.hpp  EnvCitycat.hpp  EnvCitycatConsole.hpp
cpp/src/: Random.cpp  Random.hpp
cpp/src/Utils/: Random.hpp
cpp1/: CMakeLists.txt  default.nix
cpp1/app/: sinc.cpp  yoga-console.cpp  yoga-sdl.cpp  yoga.cpp
cpp1/include/yoga/: Agent.hpp  Env.hpp  Render.hpp  RenderConsole.hpp
cpp1/include/yoga/Agent/: AgentFirst.hpp  AgentRandom.hpp
cpp1/include/yoga/Env/: EnvCitycat.hpp  EnvCitycatConsole.hpp  EnvCitycatSdl.hpp
cpp1/include/yoga/Utils/: Random.hpp
cpp2/app/: yoga-console.cpp  yoga-sdl.cpp
cpp2/include/yoga/: Env.hpp
cpp2/include/yoga/Agent/: AgentRandom.hpp
cpp2/include/yoga/Env/: EnvCitycat.hpp  EnvCitycatConsole.hpp
gym/: cartpole1-random.py  shell.nix
hs/: README.md  citycat.cabal  default.nix  yoga.cabal
hs/app/: citycat-cli.hs
hs/app/console/: Main.hs
hs/app/test/: Main.hs  Main1a.hs  Main2a.hs  Main2b.hs
hs/src/: Agent.hs  Bot.hs  Citycat.hs  Game.hs  Yoga.hs
hs/src/Bot/: Random.hs
hs/src/Game/: Citycat.hs  Find5.hs
hs/src/Yoga/: Agent.hs  Env.hs
hs/src/Yoga/Agent/: Expert.hs  Random.hs
hs1/: yoga.cabal
hs1/src/: Env.hs
hs1/src/Agent/: Random.hs
hs1/src/Env/: Citycat.hs  Find5.hs
tmp/: city.py  test.cpp
