cabal-version:      2.2
name:               citycat
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O2 -threaded
    default-language:   Haskell2010
    build-depends:      base, grenade, vector

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Citycat

executable citycat-cli
    import:             deps
    hs-source-dirs:     app
    main-is:            citycat-cli.hs
    build-depends:      citycat


