cabal-version:      2.2
name:               yoga
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O2 -threaded
    default-language:   Haskell2010
    build-depends:      base, grenade, vector

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Agent
                        Agent.Random
                        Env
                        Env.Citycat

executable yoga-console
    import:             deps
    hs-source-dirs:     app/console
    main-is:            Main.hs
    build-depends:      yoga

executable yoga-gloss
    import:             deps
    hs-source-dirs:     app/gloss
    main-is:            Main.hs
    build-depends:      yoga, gloss


