cabal-version:      2.2
name:               yoga
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O2 -threaded
    default-language:   Haskell2010
    build-depends:      base
                      -- , deque
                      , grenade
                      , lens
                      -- , linear
                      , massiv
                      , mwc-random
                      -- , random
                      , vector

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Yoga
                        Yoga.Agent
                        Yoga.Agent.Random
                        Yoga.Env

executable yoga-console
    import:             deps
    hs-source-dirs:     app/console
    main-is:            Main.hs
    build-depends:      yoga

executable yoga-gloss
    import:             deps
    hs-source-dirs:     app/gloss
    main-is:            Main.hs
    build-depends:      yoga, gloss


